--- a/av2/package.json
+++ b/av2/package.json
@@ -17,9 +17,10 @@
     "typescript": "^5.5.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.1"
+    "@prisma/client": "^5.16.1",
+    "axios": "^1.7.2"
   },
   "prisma": {
-    "schema": "./src/infra/database/schema.prisma"
+    "schema": "./src/infrastructure/database/schema.prisma"
   }
 }
