--- a/av2/package.json
+++ b/av2/package.json
@@ -18,7 +18,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.16.1",
-    "axios": "^1.7.2"
+    "@types/express": "^4.17.21",
+    "axios": "^1.7.2",
+    "express": "^4.19.2"
   },
   "prisma": {
     "schema": "./src/infrastructure/database/schema.prisma"
